--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <br>
 <img src ="aa.jpg" width="940px" height ="700px" alt="picture of a forg"/>
 <h1> نسبة</h1>
-<b>هو محمد عبد الرحمن عبد الجبار محمد حسن ناصر محمد احمد ابراهيم عبدالله عبدالله علي القاسم علي محمد صالح ناصرعبدالله علي محسن الحسن محمد يحي علي محمدمحسن عبد القادر علي القاسم محمد ابابكر الصدية خليفة الاسلام الاول</b>
+<b>هو محمد عبد الرحمن عبد الجبار محمد حسن ناصر محمد احمد ابراهيم عبدالله عبدالله علي القاسم علي محمد صالح ناصرعبدالله علي محسن الحسن محمد يحي علي محمدمحسن عبد القادر علي القاسم محمد ابابكر الصديق خليفة الاسلام الاول</b>
 </div>
 </div>
 
