--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 <li><a href ="index.html">الرئيسية </a></li>
 <li><a href ="#aa">نسبه</a></li>
 <li><a href ="#bb">مناقبه</a></li>
-<li><a href ="#cc">مؤلفاته</a></li>
+<li><a href ="#cc">القصيدة الاولى</a></li>
+<li><a href ="#dd">القصيدة الثانية</a></li>
+<li><a href ="#ee">المخطوطات</a></li>
 </ul>
 </div>
 </div>
@@ -46,7 +48,7 @@
 <br>
 <img src ="aa.jpg" width="940px" height ="700px" alt="picture of a forg"/>
 <h1> نسبة</h1>
-<b>هو محمد عبد الرحمن عبد الجبار محمد حسن ناصر محمد احمد ابراهيم عبدالله عبدالله علي القاسم علي محمد صالح ناصرعبدالله علي محسن الحسن محمد يحي علي محمدمحسن عبد القادر علي القاسم محمد ابابكر الصديق خليفة الاسلام الاول</b>
+<b>هو محمد عبد الرحمن عبد الجبار محمد حسن ناصر محمد احمد ابراهيم عبدالله عبدالله علي القاسم علي محمد صالح ناصرعبدالله علي محسن الحسن محمد يحي علي محمد محسن عبد القادر علي القاسم محمد ابابكر الصديق خليفة الاسلام الاول</b>
 </div>
 </div>
 
@@ -56,7 +58,7 @@
 <img src ="bb.jpg" width="940px" height ="700px" alt="picture of a forg"/>
 <h1>مناقبة </h1>
 <b> 
- ولد القاضي محمد عبد الرحمن في قرية عدن الاشلوح عام 1913م وتربى في القرية وتعلم القران علي يد والده العلامة القاضي عبد الرحمن عبد الجبار السماوي فاختاره الامام احمد لتعليم وارشاد الناس وقد ارسله الى إب ودرس في اب في جامعة المسعف تلقى الدروس في الارشاد والتوعية والقران والنحو والخطابة وكان الاول على زملائه وكان زميله القاضي يحي السؤسؤة وبعد سنة اعطي اوامر في تعليم ناحية السياني من الامام احمد في تعليم الدين والصلاةوبعدها ختم الناحية وقد عاد الى قريته فصار بيته مقر للذكر وللاحاديث وتعليم الدين السلامي وكان فطننا في النحو والتجويد والقراءة وصار خطيبا وامينا للقريةوبعدها عشق مكة المكرمة وزيارة النبي صلى الله عليه وسلم وقد حج الى بيت الله الحرام ٢٨ موسم وكان زاهدا اشتغل بالذكر ليلا ونهار وصار مثلا يحتذى به في الناحية وقد اشتهر بالصلاح والثقة وكان زاهدا تقيا وصار ملازما للذكر حتى وافته المنية في يوم الاربعاء صباحا 5 جماد اول 1426ه الموافق 2005/6/15م
+ ولد القاضي محمد عبد الرحمن السماوي في قرية عدن الاشلوح عام 1913م وتربى في القرية وتعلم القران علي يد والده العلامة القاضي عبد الرحمن عبد الجبار السماوي فاختاره الامام احمد لتعليم وارشاد الناس وقد ارسله الى إب ودرس في اب في جامعة المسعف تلقى الدروس في الارشاد والتوعية والقران والنحو والخطابة وكان الاول على زملائه وكان زميله القاضي يحي السؤسؤة وبعد سنة اعطي اوامر في تعليم ناحية السياني من الامام احمد في تعليم الدين والصلاةوبعدها ختم الناحية وقد عاد الى قريته فصار بيته مقر للذكر وللاحاديث وتعليم الدين الاسلامي وكان فطننا في النحو والتجويد والقراءة وصار خطيبا وامينا للقريةوبعدها عشق مكة المكرمة وزيارة النبي صلى الله عليه وسلم وقد حج الى بيت الله الحرام ٢٨ موسم وكان زاهدا اشتغل بالذكر ليلا ونهار وصار مثلا يحتذى به في الناحية وقد اشتهر بالصلاح والثقة وكان زاهدا تقيا وصار ملازما للذكر حتى وافته المنية في يوم الاربعاء صباحا 5 جماد اول 1426ه الموافق 2005/6/15م
 </b>
 </div>
 
@@ -65,8 +67,9 @@
 <br>
 <img src ="cc.jpg" width="940px" height ="700px" alt="picture of a forg"/>
 <h1>مؤلفاته</h1>
+<h1>القصيدة الاولى</h1>
 <b>  هذه القصيدة من مؤلفات العلامةالقاضي محمد 
-عبدالرحمن عبد الجبار السماوي الفها حين عزم
+عبدالرحمن عبد الجبار السماوي رحمه الله وتغشاه بواسع رحمته الفها حين عزم
 الى مكة المكرمة
 <br>
 يالله المطلوب ارحم بنا واشفق *** يارازق الحيتان بين امواجه
@@ -91,13 +94,13 @@
 <br>
 ياصاح قم شد الجواد الاسبق *** امهر محجل شانعات اهواجه
 <br>
-اعيان لهجمر القرض تتفشق *** تخرج شرار النار بن ادعاجه
+اعيان لها جمر القرض تتفشق *** تخرج شرار النار بن ادعاجه
 <br>
 اذان له راس السنان الاذلق *** ضرب الحوافر بالصفا رحاجه
 <br>
 ربرب محرب في صهيله يزعق*** اذا فلت اتشابحت اوداجه
 <br>
-من حضرة الطود العضيم الاسبق*** الدامغ العالي رياحه افواجه
+من حضرة الطود العضيم الاسبق*** الدامغ العالي رياحه فواجه
 <br>
 على الرواس بالحجا الاطوق *** انهار من تحت الحجا نباحه
 <br>
@@ -108,9 +111,10 @@
 زاهي البكرا حضر وعرفه اعبق ***طيب الشجر صعتر وما نحتاجه
 <br>
 اذا صعد مكروب ومن اضيق***اعلا جبلنا للنفس يحتاجه
-<br>ٌفتح سلاه وباب كربه يغلق *** تحيا الخواطر من هوى افواجه
 <br>
-وقت الشفق والنو فيه اشرق *** هم يصعد واهل النفس معراجه
+ٌفتح سلاه وباب كربه يغلق *** تحيا الخواطر من هوى افواجه
+<br>
+وقت الشفق والنور فيه اشرق *** هم يصعد واهل النفس معراجه
 <br>
 سفح الجبل ترى القمارى تزعق *** فتيانها  فتيانها عباجه
 <br>
@@ -126,7 +130,7 @@
 <br>
 بطالع العلوم بملحه بحرق *** ثم الخميس والفتح في منهاجه
 <br>
-كل الجهال لها رؤس ترمق *** والدامغ الدامغ راس الحاجه
+كل الجبال لها رؤس ترمق *** والدامغ الدامغ راس الحاجه
 <br>
 هيهات كم من صبي يعشق *** حب المداكي فيوسفوح افواجه
 <br>
@@ -140,7 +144,7 @@
 <br>
 سلم وسلم ربنا لا نغرق *** نركب على الواحها المواجه
 <br>
-ياحافض السفن ببحر اغمق *** احفض غريباصار بين امواجه
+ياحافض السفن ببحر اغمق *** احفض غريبا صار بين امواجه
 <br>
 من تحتي الماء والسماء من فوق *** ماعاد الا نجومها الوهاجه
 <br>
@@ -152,13 +156,13 @@
 <br>
 في نصف شهر قط مانتعوق *** نخرج على جده مع الخراجه
 <br>
-شعثا وغبرا بالتالبي نزعق *** ومحرمين في زمرة الحجاجه
+شعثا وغبرا بالتلابي نزعق *** ومحرمين في زمرة الحجاجه
 <br>
 وام القرى نكسب خل احذق *** يدلنا على قضاة الحاجه
 <br>
 نفوز بمن  في حبها نتعشق *** اشكو جفاها هجر ها فلاجه
 <br>
-دعجا نجا بلجا صفاها اشرق *** كحال ليلا سال غناجه
+دعجا نعجا بلجا صفاها اشرق *** كحال ليلا سال غناجه
 <br>
 تلبس قراطق الحرير الازرق *** منسوج ذهب مرصوع في انشاجه
 <br>
@@ -176,7 +180,7 @@
 <br>
 مع الدراي والجمال الاغدق *** والسرفي احواضها الغناجه
 <br>
-والله لادخل جوفها واتحدق *** واشرب زالال اعيانها النباجه
+والله لادخل جوفها واتحدق *** واشرب زلال اعيانها النباجه
 <br>
 ومن مراشفها ارتشف واتعلق *** بذيالها وامرج مع المراجه
 <br>
@@ -192,13 +196,112 @@
 <br>
 وبعدها ارض اليمن نتشوق *** حب الوطن اشواقنا زعاجه
 <br>
-والختم صلوا ما البلابل تزعق *** او ماالقمر يدور في ابراجه
+والختم صلوا ما البلابل تزعق *** او ما القمر يدور في ابراجه
 <br>
 على النبي والال كلهم دقدق *** جيش العدا يرجون قضا الحاجه
 <br>
 الحقوق محفوضة لدى الناشر لايحق لاي شخص اقتباس جزء منها  الا اذا ذكر المصدر
 </b>
 </div>
+<div class =" text7">
+<div id="dd"></div>
+<h1> القصيدة الثانية</h1>
+<b>
+
+ومن ما قاله العلامه محمد عبد الرحمن السماوي رحمه الله وتغشاه بواسع رحمته عند فقده لابيه وهو في المدينة المنورة على ساكنها افضل الصلاة والسلام وطلب الفسح من المصطفى ليعود الى مكة وسمع طائر البلبل على نخله وهو عند مسجد قباء وانشد هذه الابيات 
+<br>
+يابلبلا بين البلابل بلبلا *** مهلا رويدا الفؤاد اشتعلا
+<br>
+احرقت جوف الجافي عن احبابه *** نغمك ربابي هز روابي ذالخلا
+ <br>
+اسكر حواسي ثم ذكرني ابا *** حبيبا حسيبا بهلوانا افضلا
+<br>
+مهيمنا على الاولاد شفيقا في اهله *** خلقا وخلقا للمحاسن شملا
+<br>
+من بيت علم نجل عالم قد مضى *** مخلوط في عقل رجيح اكملا
+<br>
+شخص كريم خلقت من ماء صلبه *** ماء من جميع اعضائه قد نزلا
+<br>
+خلقي نزل من سبل قرة عينه *** سلالة من ماء مهين حصلا
+<br>
+وتكونت نطفة مفاصل سيدي *** سواني الخلاق منها رجلا
+<br>
+واخرجني الله من مجاري صلبه *** وروحي من روح الابا انفصلا
+<br>
+ياروح روحي هل تمن يا ابتي *** في نظرة من وجهك المهلهلا
+<br>
+أو ضمة من جسمك الصفي الندي *** تشفي به داء ولدك كالعسلا
+<br>
+احببت ان انظر لوجهك نظرة *** اولمحة من ظل شخصك يرملا
+<br>
+ركضني زمان القرب منك برجله *** وادخلني البعد المبرح مدخلا
+<br>
+جعلت فداء نعلك ومضجع مضجعك *** وامعاء جوفك وما منها نزلا
+<br>
+ولحم اعضائك مع الجسم الذي *** اذا تصبب عرقا واغتسلا
+<br>
+كانه البدر المدور في السماء *** وريحه يحي العظام النحلا
+<br>
+شوق لغرفة انت فيها ساكنا *** وثوب قطن فيه جسمك دخلا
+<br>
+تاجك شمسا ووجهك قمرا *** وليلك صبحا وسمرك عسلا
+<br>
+ليت شعري هل افوز بوصلكا *** واستنشق الريح في بلوغ الاملا
+<br>
+والثم ورود خدك وقبل كفكا *** عسى لبعد البين يرجع اسفلا
+<br>
+وان حكم الابعاد بين وبينكا *** أحوقل اه ولا حولا ولا
+<br>
+ولكني في روضة الهادي الشفيع *** ملتمس الشباك ودمعي هملا
+<br>
+معتنق قبر الحبيب المصطفى *** بجاهه عودى لاهلي عجلا
+<br>
+يابن العواتك من قريش المددا *** شوال مضى والركب عني رحلا
+<br>
+قد زل بدرا اينما قال الكريم *** فيه لكم والركب عنكم رحلا 
+<br>
+الفسح ياسيد ولد ادم وداع *** ثم الاعانه والغوث ياسيد الملا
+<br>
+الاستخاره في الاشاره عاجلا *** هات خيرتي في ليلتي لا تبخلا
+<br>
+يافرحتي طلبني خير الورى *** قال قربو فيمن الينا وصلا
+<br>
+وبليلتي دخلت في حجرته *** ثم قربت ياحبذاك المدخلا
+<br>
+الى شريف المضجع العالي وكان *** مضطجعا حتى نهض مستقبلا
+<br>
+إلى اللقاء وصاحبيه معه *** وزرتهم حتى بلغت الاملا
+<br>
+ثم افتسحت بعد طول زورة *** وقد عشاني نوره المشتعلا
+<br>
+صلى عليك الله ياخير الورا *** ياخاتما للرسل وخلقك اولا
+<br>
+والاال والاصحاب ماسبح له *** بلبل بدى على الروابي بلبلا
+<br>
+</b>
+</div>
+
+<div class ="text6">
+<div id="ee"></div>
+<h1>  المخطوطات</h1>
+<br>
+<b>
+لمشاهدة المخطوطة الاولى
+<br>
+<br>
+<a href ="index1.html">اضغط هنا</a>
+<br>
+<br>
+لمشاهدة المخطوطة الثانية
+<br>
+<br>
+<a href ="index2.html">اضغط هنا</a>
+</b>
+
+
+
+</div>
+
 
 <div class="nav">
   الحقوق محفوضة لدى alsamawy.com 
