--- a/index1.html
+++ b/index1.html
@@ -28,8 +28,63 @@
 <div class ="text8">
 <h1>  المخطوطة الاولى</h1>
 
-<b>
-انتضرونا قريبا
+
+<img src ="1.jpg" width="940px" height ="700px" alt="picture of a forg"/>
+
+<br>
+<img src ="2.jpg" width="940px" height ="700px" alt="picture of a forg"/>
+<br>
+<img src ="3.jpg" width="940px" height ="700px" alt="picture of a forg"/>
+<br>
+<img src ="4.jpg" width="940px" height ="700px" alt="picture of a forg"/>
+<br>
+<img src ="5.jpg" width="940px" height ="700px" alt="picture of a forg"/>
+<br>
+<img src ="6.jpg" width="940px" height ="700px" alt="picture of a forg"/>
+<br>
+<img src ="7.jpg" width="940px" height ="700px" alt="picture of a forg"/>
+<br>
+<img src ="8.jpg" width="940px" height ="700px" alt="picture of a forg"/>
+<br>
+<img src ="9.jpg" width="940px" height ="700px" alt="picture of a forg"/>
+<br>
+<img src ="10.jpg" width="940px" height ="700px" alt="picture of a forg"/>
+<br>
+<img src ="11.jpg" width="940px" height ="700px" alt="picture of a forg"/>
+<br>
+<img src ="12.jpg" width="940px" height ="700px" alt="picture of a forg"/>
+<br>
+<img src ="13.jpg" width="940px" height ="700px" alt="picture of a forg"/>
+<br>
+<img src ="14.jpg" width="940px" height ="700px" alt="picture of a forg"/>
+<br>
+<img src ="15.jpg" width="940px" height ="700px" alt="picture of a forg"/>
+<br>
+<img src ="15.jpg" width="940px" height ="700px" alt="picture of a forg"/>
+<br>
+<img src ="16.jpg" width="940px" height ="700px" alt="picture of a forg"/>
+<br>
+<img src ="17.jpg" width="940px" height ="700px" alt="picture of a forg"/>
+<br>
+<img src ="18.jpg" width="940px" height ="700px" alt="picture of a forg"/>
+<br>
+<img src ="19.jpg" width="940px" height ="700px" alt="picture of a forg"/>
+<br>
+<img src ="20.jpg" width="940px" height ="700px" alt="picture of a forg"/>
+<br>
+<img src ="21.jpg" width="940px" height ="700px" alt="picture of a forg"/>
+<br>
+<img src ="22.jpg" width="940px" height ="700px" alt="picture of a forg"/>
+<br>
+<img src ="23.jpg" width="940px" height ="700px" alt="picture of a forg"/>
+<br>
+<img src ="24.jpg" width="940px" height ="700px" alt="picture of a forg"/>
+<br>
+<img src ="25.jpg" width="940px" height ="700px" alt="picture of a forg"/>
+<br>
+</div>
+
+
 </b>
 </div>
 
