--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
         "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-    <title>العلامه القاضي محمد عبد الرحمن السماوي</title>
+    <title>العلامة القاضي محمد عبد الرحمن السماوي</title>
 <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 <div id ="header">
 <br>
-<b><marquee> العلامه القاضي محمد عبد الرحمن السماوي</marquee></b>
+<b><marquee direction ="right"> العلامة القاضي محمد عبد الرحمن السماوي</marquee></b>
 <br>
 
 <!--  القائمة -->
@@ -17,9 +17,10 @@
 <li><a href ="index.html">الرئيسية </a></li>
 <li><a href ="#aa">نسبه</a></li>
 <li><a href ="#bb">مناقبه</a></li>
-<li><a href ="#cc">القصيدة الاولى</a></li>
-<li><a href ="#dd">القصيدة الثانية</a></li>
-<li><a href ="#ee">المخطوطات</a></li>
+<li><a href ="#cc">المخطوطات</a></li>
+<li><a href ="index1.html">القصيدة الاولى</a></li>
+<li><a href ="index2.html">القصيدة الثانية</a></li>
+
 </ul>
 </div>
 </div>
@@ -40,259 +41,155 @@
 </div>
  
 <div class ="text1">
-<b>سنقوم بذكر نبذة مختصرة من مولفاته ومناقبة ودورة تعليمه للقران الكريم وكيف كانت معيشته واين عاش وكيفية وفاته ومتى توفي واين دفن </b>
+<b>سنقوم بذكر نبذة مختصرة عن العلامة القاضي محمد عبد الرحمن السماوي ومناقبة والمخطوطات التي قام بكتابتها ودورة تعليمه للقران الكريم وكيف كانت معيشته واين عاش ومتى توفي واين دفن </b>
 </div>
 
 <div class ="text2">
-<div id="aa">
+<div id="aa"></div>
 <br>
-<img src ="aa.jpg" width="940px" height ="700px" alt="picture of a forg"/>
-<h1> نسبة</h1>
+<img src ="aa.jpg" width="800px" height ="900px" alt="picture of a forg"/>
+</div>
+<h3> نسبة </h3>
+<div class ="text2">
 <b>هو محمد عبد الرحمن عبد الجبار محمد حسن ناصر محمد احمد ابراهيم عبدالله عبدالله علي القاسم علي محمد صالح ناصرعبدالله علي محسن الحسن محمد يحي علي محمد محسن عبد القادر علي القاسم محمد ابابكر الصديق خليفة الاسلام الاول</b>
 </div>
-</div>
+
 
 <div class ="text3">
 <br>
 <div id="bb"></div>
-<img src ="bb.jpg" width="940px" height ="700px" alt="picture of a forg"/>
-<h1>مناقبة </h1>
+<img src ="bb.jpg" width="800px" height ="900px" alt="picture of a forg"/>
+</div>
+<h3>مناقبة </h3>
+<div class ="text3">
 <b> 
- ولد القاضي محمد عبد الرحمن السماوي في قرية عدن الاشلوح عام 1913م وتربى في القرية وتعلم القران علي يد والده العلامة القاضي عبد الرحمن عبد الجبار السماوي فاختاره الامام احمد لتعليم وارشاد الناس وقد ارسله الى إب ودرس في اب في جامعة المسعف تلقى الدروس في الارشاد والتوعية والقران والنحو والخطابة وكان الاول على زملائه وكان زميله القاضي يحي السؤسؤة وبعد سنة اعطي اوامر في تعليم ناحية السياني من الامام احمد في تعليم الدين والصلاةوبعدها ختم الناحية وقد عاد الى قريته فصار بيته مقر للذكر وللاحاديث وتعليم الدين الاسلامي وكان فطننا في النحو والتجويد والقراءة وصار خطيبا وامينا للقريةوبعدها عشق مكة المكرمة وزيارة النبي صلى الله عليه وسلم وقد حج الى بيت الله الحرام ٢٨ موسم وكان زاهدا اشتغل بالذكر ليلا ونهار وصار مثلا يحتذى به في الناحية وقد اشتهر بالصلاح والثقة وكان زاهدا تقيا وصار ملازما للذكر حتى وافته المنية في يوم الاربعاء صباحا 5 جماد اول 1426ه الموافق 2005/6/15م
+ ولد القاضي محمد عبد الرحمن السماوي في قرية عدن الاشلوح عام 1913م وتربى في القرية وتعلم القران علي يد والده العلامة القاضي عبد الرحمن عبد الجبار السماوي فاختاره الامام احمد لتعليم وارشاد الناس وقد ارسله الى إب ودرس في اب في جامعة المسعف تلقى الدروس في الارشاد والتوعية والقران والنحو والخطابة وكان الاول على زملائه وكان زميله القاضي يحي السؤسؤة وبعد سنة اعطي اوامر في تعليم ناحية السياني من الامام احمد في تعليم الدين والصلاةوبعدها ختم الناحية وقد عاد الى قريته فصار بيته مقر للذكر وللاحاديث وتعليم الدين الاسلامي وكان فطننا في النحو والتجويد والقراءة وصار خطيبا وامينا للقريةوبعدها عشق مكة المكرمة وزيارة النبي صلى الله عليه وسلم وقد حج الى بيت الله الحرام ٢٨ موسم وكان زاهدا اشتغل بالذكر ليلا ونهار وصار مثلا يحتذى به في الناحية وقد اشتهر بالصلاح والثقة وكان تقياً  زاهداً وصار ملازماً للذكر حتى وافته المنية في يوم الاربعاء صباحاً 5 جماد اول 1426ه الموافق 2005/6/15م
 </b>
 </div>
 
 <div class ="text4">
 <div id="cc"></div>
 <br>
-<img src ="cc.jpg" width="940px" height ="700px" alt="picture of a forg"/>
-<h1>مؤلفاته</h1>
-<h1>القصيدة الاولى</h1>
-<b>  هذه القصيدة من مؤلفات العلامةالقاضي محمد 
-عبدالرحمن عبد الجبار السماوي رحمه الله وتغشاه بواسع رحمته الفها حين عزم
-الى مكة المكرمة
+<img src ="ee.jpg" width="800px" height ="900px" alt="picture of a forg"/>
+</div>
+
+<h3>ومن بعض المخطوطات التي عثر عليها</h3>
+<div class ="text4">
+<h1>مخطوطة لكتاب الزبد في الفقه وسنذكر نبذه منها</h1>
+</div>
+
+<h2>بسم الله الرحمن الرحيم</h2>
+
+<div class ="text9">
+اول   مانستفتح    المقال *      بذكر     حمد    ربنا    تعالى
 <br>
-يالله المطلوب ارحم بنا واشفق *** يارازق الحيتان بين امواجه
-<br>
-من فيض بحرك كل نفس ترزق*** واقامها بارداقها دراجه
-<br>
-وماذا عليك وجوبا مطلق *** لكن فضائل شاملة عباجه
-<br>
-انت الذي ان جدت جودك مسبق*** وانت الذي تسرع قضات الحاجه
-<br>
-ارجوك تغفر لي فانت الاشفق ***ياخالقي من نطفة امشاجه
-<br>
-بحق نور الحبيب الاشفق ***غاره سريعة عاجلة فواجه
-<br>
-صلو على روح النبي الاصدق*** المصطفى من فاز في معراج
-<br>
-سميره جبريل لخوفه رفق *** حتى على المرافق تاجه
-<br>
-ابن السماوي بالمعاني دفق ***  فاسمع ترى نتايج الخراجة
-<br>
-اعداد اسمى بالمجمل وافق ** ضعف الماء بواحد اخراجه
-<br>
-ياصاح قم شد الجواد الاسبق *** امهر محجل شانعات اهواجه
-<br>
-اعيان لها جمر القرض تتفشق *** تخرج شرار النار بن ادعاجه
-<br>
-اذان له راس السنان الاذلق *** ضرب الحوافر بالصفا رحاجه
-<br>
-ربرب محرب في صهيله يزعق*** اذا فلت اتشابحت اوداجه
-<br>
-من حضرة الطود العضيم الاسبق*** الدامغ العالي رياحه فواجه
-<br>
-على الرواس بالحجا الاطوق *** انهار من تحت الحجا نباحه
-<br>
-يزرع كما حب الحصيد الاذوق***ومزان عليه من السماء فجاجه
-<br>
-شامخ على صهبان عريض الخندق *** مرعا القمارى في سفوح افواجه
-<br>
-زاهي البكرا حضر وعرفه اعبق ***طيب الشجر صعتر وما نحتاجه
-<br>
-اذا صعد مكروب ومن اضيق***اعلا جبلنا للنفس يحتاجه
-<br>
-ٌفتح سلاه وباب كربه يغلق *** تحيا الخواطر من هوى افواجه
-<br>
-وقت الشفق والنور فيه اشرق *** هم يصعد واهل النفس معراجه
-<br>
-سفح الجبل ترى القمارى تزعق *** فتيانها  فتيانها عباجه
-<br>
-ترى النشايد والحمايم  تنعق *** مجلس اوادم مابها مزباجه
-<br>
-هم الحور غرر جباههم تعرق *** كان راح الخمر  في خلجاجه
-<br>
-نجوى نشاوى والمعا ني  تلحق *** كم عاشقا تزعزعت اخلاجه
-<br>
-من الحدق يسكب دموعا تحرق *** يخرج سماع ا بيا تها زعاجه
-<br>
-كم قد بسطنا في الجبل نتحقق *** كل الجهات  بيامها البلاجه
-<br>
-بطالع العلوم بملحه بحرق *** ثم الخميس والفتح في منهاجه
-<br>
-كل الجبال لها رؤس ترمق *** والدامغ الدامغ راس الحاجه
-<br>
-هيهات كم من صبي يعشق *** حب المداكي فيوسفوح افواجه
-<br>
-من ذا الوطن حثحث ركاب الابلق ***  قبيل تطلع شمسها الوهاجه
-<br>
-وامسي بالعدين لا تتعوق *** وانزل تهامه حرها وهاجه
-<br>
-وادخل زبيد على المشايخ واشعق *** منهم بدعوه ثم سرد لاجه
+والحمد لله على ما انعما * حمداً به يجلو عن القلب العمى 
 <br> 
-بيت الفقيه نحو الحديدة  نطرق *** نبدي على بحورها العجاجه
+ثم الصلاة بعد والسلام * على نبي دينه الاسلام
+<br> 
+محمد خاتم رسل ربه * واله من بعده وصحبه
+<br> 
+ونسأل الله لنا الاعانة * فيما توخينا من الابانه
+<br> 
+عن مذهب الامام زيد الفرضي * اذا كان ذاك من اهم الغرض
+<br> 
+علماً بان العلم خير ما سعى * فيه واولى ماله العبد دعى
+<br> 
+وان هذا العلم مخصوص بما * قد شاع فيه عند كل العلماء
+<br> 
+بانه اول علم يفقد * بالارض حتى لايكاد يوجد
+<br> 
+وان زيداً خص لامحاله * بما حباه صاحب الرساله
+<br>
+من قوله في فضله منبهاً * افرضكم زيد وناهيك بها
+<br>
+فكان اولى بالتباع التابعي *لاسيما وقد نحاه الشافعي
+<br>
+فهاك فيه القول عن ايجازي * مبرا عن وصمة الالغاز
 <br>
-سلم وسلم ربنا لا نغرق *** نركب على الواحها المواجه
-<br>
-ياحافض السفن ببحر اغمق *** احفض غريبا صار بين امواجه
-<br>
-من تحتي الماء والسماء من فوق *** ماعاد الا نجومها الوهاجه
-<br>
-البر غاب والماء علينا اغلق *** ولا نرى جبل ولا شلجاجه
-<br>
-الادفور امواجها تدفق *** حالة علينا اهوالها الهجاجه
-<br>
-اشمر بنا لف الشراع الابرق *** طارت بنا فوق العجل دراجه
-<br>
-في نصف شهر قط مانتعوق *** نخرج على جده مع الخراجه
-<br>
-شعثا وغبرا بالتلابي نزعق *** ومحرمين في زمرة الحجاجه
-<br>
-وام القرى نكسب خل احذق *** يدلنا على قضاة الحاجه
-<br>
-نفوز بمن  في حبها نتعشق *** اشكو جفاها هجر ها فلاجه
-<br>
-دعجا نعجا بلجا صفاها اشرق *** كحال ليلا سال غناجه
-<br>
-تلبس قراطق الحرير الازرق *** منسوج ذهب مرصوع في انشاجه
-<br>
-فضه ورق والتبر فيها ملفق *** والخز والديباج   في ديباجه
-<br>
-مشطوب كتوب مكتوب قول الاصدق *** حروف تسرج في الحرم سراجه
-<br>
-ومضحك المبسم بروق الابرق *** والريق عسل والسحر بين ادعاجه
-<br>
-وريحها المسك السحيق الاعبق *** والعطر شايً عرفها نعاجه
-<br>
-ثم الشمطري والعبيٌر الافوق *** والند يفتح لوعة الملهاجه
-<br>
-افدي قوامها البديع الارشق *** وحيد رور اعيانها المواجه
-<br>
-مع الدراي والجمال الاغدق *** والسرفي احواضها الغناجه
-<br>
-والله لادخل جوفها واتحدق *** واشرب زلال اعيانها النباجه
-<br>
-ومن مراشفها ارتشف واتعلق *** بذيالها وامرج مع المراجه
-<br>
-وامضي مدينة الحبيب الاشفق *** نزور من في الاخره نحتاجه
-<br>
-قبر النبي ومن بقوله اصدق *** واله وصحبه وازواجه
-<br>
-حلفت لاقصد نحوهم واتعلق *** بكل واحد في محل ابراجه
-<br>
-بحقهم ياذا العلا لا تفرق *** بيني وبينهم في حاجه
-<br>
-واحشرنا الجميع في زمرتهم نترفق *** يوم اللقا فيهم من الهجاجه
-<br>
-وبعدها ارض اليمن نتشوق *** حب الوطن اشواقنا زعاجه
-<br>
-والختم صلوا ما البلابل تزعق *** او ما القمر يدور في ابراجه
-<br>
-على النبي والال كلهم دقدق *** جيش العدا يرجون قضا الحاجه
-<br>
-الحقوق محفوضة لدى الناشر لايحق لاي شخص اقتباس جزء منها  الا اذا ذكر المصدر
-</b>
-</div>
-<div class =" text7">
-<div id="dd"></div>
-<h1> القصيدة الثانية</h1>
-<b>
-
-ومن ما قاله العلامه محمد عبد الرحمن السماوي رحمه الله وتغشاه بواسع رحمته عند فقده لابيه وهو في المدينة المنورة على ساكنها افضل الصلاة والسلام وطلب الفسح من المصطفى ليعود الى مكة وسمع طائر البلبل على نخله وهو عند مسجد قباء وانشد هذه الابيات 
-<br>
-يابلبلا بين البلابل بلبلا *** مهلا رويدا الفؤاد اشتعلا
-<br>
-احرقت جوف الجافي عن احبابه *** نغمك ربابي هز روابي ذالخلا
- <br>
-اسكر حواسي ثم ذكرني ابا *** حبيبا حسيبا بهلوانا افضلا
-<br>
-مهيمنا على الاولاد شفيقا في اهله *** خلقا وخلقا للمحاسن شملا
-<br>
-من بيت علم نجل عالم قد مضى *** مخلوط في عقل رجيح اكملا
-<br>
-شخص كريم خلقت من ماء صلبه *** ماء من جميع اعضائه قد نزلا
-<br>
-خلقي نزل من سبل قرة عينه *** سلالة من ماء مهين حصلا
-<br>
-وتكونت نطفة مفاصل سيدي *** سواني الخلاق منها رجلا
-<br>
-واخرجني الله من مجاري صلبه *** وروحي من روح الابا انفصلا
-<br>
-ياروح روحي هل تمن يا ابتي *** في نظرة من وجهك المهلهلا
-<br>
-أو ضمة من جسمك الصفي الندي *** تشفي به داء ولدك كالعسلا
-<br>
-احببت ان انظر لوجهك نظرة *** اولمحة من ظل شخصك يرملا
-<br>
-ركضني زمان القرب منك برجله *** وادخلني البعد المبرح مدخلا
-<br>
-جعلت فداء نعلك ومضجع مضجعك *** وامعاء جوفك وما منها نزلا
-<br>
-ولحم اعضائك مع الجسم الذي *** اذا تصبب عرقا واغتسلا
-<br>
-كانه البدر المدور في السماء *** وريحه يحي العظام النحلا
-<br>
-شوق لغرفة انت فيها ساكنا *** وثوب قطن فيه جسمك دخلا
-<br>
-تاجك شمسا ووجهك قمرا *** وليلك صبحا وسمرك عسلا
-<br>
-ليت شعري هل افوز بوصلكا *** واستنشق الريح في بلوغ الاملا
-<br>
-والثم ورود خدك وقبل كفكا *** عسى لبعد البين يرجع اسفلا
-<br>
-وان حكم الابعاد بين وبينكا *** أحوقل اه ولا حولا ولا
-<br>
-ولكني في روضة الهادي الشفيع *** ملتمس الشباك ودمعي هملا
-<br>
-معتنق قبر الحبيب المصطفى *** بجاهه عودى لاهلي عجلا
-<br>
-يابن العواتك من قريش المددا *** شوال مضى والركب عني رحلا
-<br>
-قد زل بدرا اينما قال الكريم *** فيه لكم والركب عنكم رحلا 
-<br>
-الفسح ياسيد ولد ادم وداع *** ثم الاعانه والغوث ياسيد الملا
-<br>
-الاستخاره في الاشاره عاجلا *** هات خيرتي في ليلتي لا تبخلا
-<br>
-يافرحتي طلبني خير الورى *** قال قربو فيمن الينا وصلا
-<br>
-وبليلتي دخلت في حجرته *** ثم قربت ياحبذاك المدخلا
-<br>
-الى شريف المضجع العالي وكان *** مضطجعا حتى نهض مستقبلا
-<br>
-إلى اللقاء وصاحبيه معه *** وزرتهم حتى بلغت الاملا
-<br>
-ثم افتسحت بعد طول زورة *** وقد عشاني نوره المشتعلا
-<br>
-صلى عليك الله ياخير الورا *** ياخاتما للرسل وخلقك اولا
-<br>
-والاال والاصحاب ماسبح له *** بلبل بدى على الروابي بلبلا
-<br>
-</b>
 </div>
 
-<div class ="text6">
+<h2>باب اسباب الميراث</h2>
+
+<div class ="text9">
+ اسباب ميراث الوراثه ثلاثه* كلاً يفيد ربه الوراثة
+<br>
+وهي ولا ونكاح ونسب * مابعدهن للموارث سبب
+<br>
+وقد يقال بعدهن رابع * ميراث بيت المسلمين تابع
+<br>
+</div>
+
+<h2>باب موانع الارث</h2>
+
+<div class="text9">
+ويمنع الشخص من الميراث * واحدة من علا ثلاثة  
+<br>
+رقُّ وقتل واختلافُ دينِ * فافهم فليس الشك كاليقينِ
+<br>
+</div>
+
+<h2>باب الانيه</h2>
+
+<div class="text9">
+يباح منها طاهر من خشب * وغيره لافضة وذهب 
+<br>
+فيحرم استعماله كم ود * لامرأة وجاز من زبرجد
+<br>
+ويحرم الضبة من هذين * بكبر عرفاً مع التزيين 
+<br>
+قلت كذاك صحح الجمهور * ان الضباب مطلقاً محضور 
+<br>
+ان فقدت حلت وفردا تكره * والحاجة مالم تجاوز كسره
+<br>
+ويستحب في الاواني التغطية * ولو بعود حط فوق الانية
+<br>
+ويتحر لإشتباه طاهر * بنجس ولولا عمي قادر
+<br>
+كا الكم اولبول وميته وما * وردٍ وخمرٍ دراً من حرما
+<br>
+</div>
+
+<h2>باب السواك</h2>
+
+<div class="text9">
+يسن لابعد زوال الصايم * واكد ولا لانتباه النايم
+<br>
+ولتغير فم وللصلاة * ويسن باليمنى الاراك أولاه
+<br>
+ويستحب الاكتحال وتراً * وغباً ادهن وقلم ظفراً
+<br>
+وانتف الابط ويقص الشارب * والعانة احلق والختان واجب
+<br>
+لبالغ ساتر كمرة قطع * والا سم من انثى ويكره القزع 
+<br>
+تنزهاً والاخذ من جوانب * عنفقة ولحية وشارب
+<br>
+وحلق شعر امرأة ورد * طيب وريحان على من يهدي
+<br>
+وحرموا خضاب شعر سواد * لرجلٍ وامرأةٍ لا للجهاد
+<br>
+</div>
+
+<h2><marquee direction ="right">وسيتم ان شاء الله تعالى كتابة الباقي قام بجمع المخطوطات وكتابتها 
+MNYR ALSAMAWY للتواصل :<img src ="ff.png" width ="50px" height ="50px"></img>770597882</marquee>
+</h2>
+</div>
+
+
+
+
 <div id="ee"></div>
-<h1>  المخطوطات</h1>
-<br>
+<h3> القصائد </h3>
+<div class ="text6">
 <b>
-لمشاهدة المخطوطة الاولى
+لمشاهدة القصيدة الاولى
 <br>
 <br>
 <a href ="index1.html">اضغط هنا</a>
 <br>
 <br>
-لمشاهدة المخطوطة الثانية
+لمشاهدة  القصيدة الثانية
 <br>
 <br>
 <a href ="index2.html">اضغط هنا</a>
@@ -303,8 +200,24 @@
 </div>
 
 
+
+<h3>زوار الموقع<h3>
+<div class="text10">
+<a href="http://info.flagcounter.com/J3fR"><img src="http://s06.flagcounter.com/count/J3fR/bg_383938/txt_CCCCCC/border_383938/columns_3/maxflags_20/viewers_3/labels_1/pageviews_1/flags_1/" alt="Flag Counter" border="0"></a>
+
+</div>
+<div class ="text11">
+<div class="menu1">
+<ub>
+
+<lb><a href ="index.html">العودة الى اعلى الصفحة</a></lb>
+
+</ub>
+</div>
+</div>
+
 <div class="nav">
-  الحقوق محفوضة لدى alsamawy.com 
+  الحقوق محفوضة لدى MNYR ALSAMAWY  
 </div>
 </body>
 </html>
