--- a/index1.html
+++ b/index1.html
@@ -3,94 +3,182 @@
 <html>
 <head>
   
-    <title>العلامه القاضي محمد عبد الرحمن السماوي</title>
+    <title>العلامة القاضي محمد عبد الرحمن السماوي</title>
 <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 <div id ="header">
 <br>
-<b><marquee> العلامه القاضي محمد عبد الرحمن السماوي</marquee></b>
+<b><marquee direction ="right"> العلامة القاضي محمد عبد الرحمن السماوي</marquee></b>
 <br>
 
 <!--  القائمة -->
 <div id="menu">
 <ul>
-<li><a href ="index.html">الرئيسية </a></li>
-<li><a href ="#aa">نسبه</a></li>
-<li><a href ="#bb">مناقبه</a></li>
-<li><a href ="#cc">القصيدة الاولى</a></li>
-<li><a href ="#cc">القصيدة الثانية</a></li>
-<li><a href ="#cc">المخطوطات</a></li>
+<li><a href ="index.html">العودة الى الصفحة الرئيسية </a></li>
 </ul>
 </div>
+<br>
 
-</div>
-<div class ="text8">
-<h1>  المخطوطة الاولى</h1>
-
-
-<img src ="1.jpg" width="940px" height ="700px" alt="picture of a forg"/>
-
-<br>
-<img src ="2.jpg" width="940px" height ="700px" alt="picture of a forg"/>
-<br>
-<img src ="3.jpg" width="940px" height ="700px" alt="picture of a forg"/>
-<br>
-<img src ="4.jpg" width="940px" height ="700px" alt="picture of a forg"/>
-<br>
-<img src ="5.jpg" width="940px" height ="700px" alt="picture of a forg"/>
-<br>
-<img src ="6.jpg" width="940px" height ="700px" alt="picture of a forg"/>
-<br>
-<img src ="7.jpg" width="940px" height ="700px" alt="picture of a forg"/>
-<br>
-<img src ="8.jpg" width="940px" height ="700px" alt="picture of a forg"/>
-<br>
-<img src ="9.jpg" width="940px" height ="700px" alt="picture of a forg"/>
-<br>
-<img src ="10.jpg" width="940px" height ="700px" alt="picture of a forg"/>
-<br>
-<img src ="11.jpg" width="940px" height ="700px" alt="picture of a forg"/>
-<br>
-<img src ="12.jpg" width="940px" height ="700px" alt="picture of a forg"/>
-<br>
-<img src ="13.jpg" width="940px" height ="700px" alt="picture of a forg"/>
-<br>
-<img src ="14.jpg" width="940px" height ="700px" alt="picture of a forg"/>
-<br>
-<img src ="15.jpg" width="940px" height ="700px" alt="picture of a forg"/>
-<br>
-<img src ="15.jpg" width="940px" height ="700px" alt="picture of a forg"/>
-<br>
-<img src ="16.jpg" width="940px" height ="700px" alt="picture of a forg"/>
-<br>
-<img src ="17.jpg" width="940px" height ="700px" alt="picture of a forg"/>
-<br>
-<img src ="18.jpg" width="940px" height ="700px" alt="picture of a forg"/>
-<br>
-<img src ="19.jpg" width="940px" height ="700px" alt="picture of a forg"/>
-<br>
-<img src ="20.jpg" width="940px" height ="700px" alt="picture of a forg"/>
-<br>
-<img src ="21.jpg" width="940px" height ="700px" alt="picture of a forg"/>
-<br>
-<img src ="22.jpg" width="940px" height ="700px" alt="picture of a forg"/>
-<br>
-<img src ="23.jpg" width="940px" height ="700px" alt="picture of a forg"/>
-<br>
-<img src ="24.jpg" width="940px" height ="700px" alt="picture of a forg"/>
-<br>
-<img src ="25.jpg" width="940px" height ="700px" alt="picture of a forg"/>
-<br>
+<div class="text8">
+<h1>القصيدة الاولى</h1>
 </div>
 
-
+<h2>  هذه القصيدة من مؤلفات العلامةالقاضي محمد 
+عبدالرحمن عبد الجبار السماوي رحمه الله وتغشاه بواسع رحمته الفها حين عزم
+الى مكة المكرمة
+</h2>
+<div class="text8">
+<b>
+<br>
+ياَلله يَالَمطْلُوب بِنَا ارحْمَ وَاشْفَقْ *** يَارَازِقَ اَلحِيتَانِ بَيْن اْمَواجَهْ
+<br>
+منْ فَيْضِ بَحْرك كُلُّ نفْسٍ تَرزْقَ*** وَاقْسَامَهَا بَارْزاقَهَا دَرَّاجَهْ
+<br>
+وماذا عليك وجوباً مطلق *** لكن فضائل شاملة عباجه
+<br>
+انت الذي ان جدت جودك مسبق*** وانت الذي تسرع قضات الحاجه
+<br>
+ارجوك تغفر لي فانت الاشفق ***ياخالقي من نطفة امشاجه
+<br>
+بحق نور الحبيب الاشفق ***غاره سريعة عاجلة فواجه
+<br>
+صلو على روح النبي الاصدق*** المصطفى من فاز في معراجه
+<br>
+سميره جبريل لخوفه رفق *** حتى على المرافق تاجه
+<br>
+ابن السماوي بالمعاني دفق ***  فاسمع ترى نتايج الخراجة
+<br>
+اعداد اسمى بالمجمل وافق ** ضعف الماء بواحة اخراجه
+<br>
+ياصاح قم شد الجواد الاسبق *** امهر محجل شانعات اهواجه
+<br>
+اعيان لها جمر القرض تتفشق *** تخرج شرار النار بن ادعاجه
+<br>
+اذان له راس السنان الاذلق *** ضرب الحوافر بالصفا رحاجه
+<br>
+ربرب محرب في صهيله يزعق*** اذا فلت اتشابحت اوداجه
+<br>
+من حضرة الطود العضيم الاسبق*** الدامغ العالي رياحه فواجه
+<br>
+على الرواس بالحجا الاطوق *** انهار من تحت الحجا نباحه
+<br>
+يزرع كما حب الحصيد الاذوق***ومزان عليه من السماء فجاجه
+<br>
+شامخ على صهبان عريض الخندق *** مرعا القمارى في سفوح افواجه
+<br>
+زاهي البكرا حضر وعرفه اعبق ***طيب الشجر صعتر وما نحتاجه
+<br>
+اذا صعد مكروب ومن اضيق***اعلا جبلنا للنفس يحتاجه
+<br>
+ٌفتح سلاه وباب كربه يغلق *** تحيا الخواطر من هوى افواجه
+<br>
+وقت الشفق والنور فيه اشرق *** هم يصعد واهل النفس معراجه
+<br>
+سفح الجبل ترى القمارى تزعق *** فتيانها  فتيانها عباجه
+<br>
+ترى النشايد والحمايم  تنعق *** مجلس اوادم مابها مزباجه
+<br>
+هم الحور غرر جباههم تعرق *** كان راح الخمر  في خلجاجه
+<br>
+نجوى نشاوى والمعا ني  تلحق *** كم عاشقا تزعزعت اخلاجه
+<br>
+من الحدق يسكب دموعا تحرق *** يخرج سماع ا بيا تها زعاجه
+<br>
+كم قد بسطنا في الجبل نتحقق *** كل الجهات  بيامها البلاجه
+<br>
+بطالع العلوم بملحه بحرق *** ثم الخميس والفتح في منهاجه
+<br>
+كل الجبال لها رؤس ترمق *** والدامغ الدامغ راس الحاجه
+<br>
+هيهات كم من صبي يعشق *** حب المداكي فيوسفوح افواجه
+<br>
+من ذا الوطن حثحث ركاب الابلق ***  قبيل تطلع شمسها الوهاجه
+<br>
+وامسي بالعدين لا تتعوق *** وانزل تهامه حرها وهاجه
+<br>
+وادخل زبيد على المشايخ واشعق *** منهم بدعوه ثم سرد لاجه
+<br> 
+بيت الفقيه نحو الحديدة  نطرق *** نبدي على بحورها العجاجه
+<br>
+سلم وسلم ربنا لا نغرق *** نركب على الواحها المواجه
+<br>
+ياحافض السفن ببحر اغمق *** احفض غريبا صار بين امواجه
+<br>
+من تحتي الماء والسماء من فوق *** ماعاد الا نجومها الوهاجه
+<br>
+البر غاب والماء علينا اغلق *** ولا نرى جبل ولا شلجاجه
+<br>
+الادفور امواجها تدفق *** حالة علينا اهوالها الهجاجه
+<br>
+اشمر بنا لف الشراع الابرق *** طارت بنا فوق العجل دراجه
+<br>
+في نصف شهر قط مانتعوق *** نخرج على جده مع الخراجه
+<br>
+شعثا وغبرا بالتلابي نزعق *** ومحرمين في زمرة الحجاجه
+<br>
+وام القرى نكسب خل احذق *** يدلنا على قضاة الحاجه
+<br>
+نفوز بمن  في حبها نتعشق *** اشكو جفاها هجر ها فلاجه
+<br>
+دعجا نعجا بلجا صفاها اشرق *** كحال ليلا سال غناجه
+<br>
+تلبس قراطق الحرير الازرق *** منسوج ذهب مرصوع في انشاجه
+<br>
+فضه ورق والتبر فيها ملفق *** والخز والديباج   في ديباجه
+<br>
+مشطوب كتوب مكتوب قول الاصدق *** حروف تسرج في الحرم سراجه
+<br>
+ومضحك المبسم بروق الابرق *** والريق عسل والسحر بين ادعاجه
+<br>
+وريحها المسك السحيق الاعبق *** والعطر شايً عرفها نعاجه
+<br>
+ثم الشمطري والعبيٌر الافوق *** والند يفتح لوعة الملهاجه
+<br>
+افدي قوامها البديع الارشق *** وحيد رور اعيانها المواجه
+<br>
+مع الدراي والجمال الاغدق *** والسرفي احواضها الغناجه
+<br>
+والله لادخل جوفها واتحدق *** واشرب زلال اعيانها النباجه
+<br>
+ومن مراشفها ارتشف واتعلق *** بذيالها وامرج مع المراجه
+<br>
+وامضي مدينة الحبيب الاشفق *** نزور من في الاخره نحتاجه
+<br>
+قبر النبي ومن بقوله اصدق *** واله وصحبه وازواجه
+<br>
+حلفت لاقصد نحوهم واتعلق *** بكل واحد في محل ابراجه
+<br>
+بحقهم ياذا العلا لا تفرق *** بيني وبينهم في حاجه
+<br>
+واحشرنا الجميع في زمرتهم نترفق *** يوم اللقا فيهم من الهجاجه
+<br>
+وبعدها ارض اليمن نتشوق *** حب الوطن اشواقنا زعاجه
+<br>
+والختم صلوا ما البلابل تزعق *** او ما القمر يدور في ابراجه
+<br>
+على النبي والال كلهم دقدق *** جيش العدا يرجون قضا الحاجه
+<br>
+</div>
 </b>
+<h2>
+<marquee direction ="right">
+الحقوق محفوضة لدى الناشر لايحق لاي شخص اقتباس جزء منها  الا اذا ذكر المصدر
+</marquee>
+</h2>
+
+
+<div class ="text11">
+<div class="menu1">
+<ub>
+
+<lb><a href ="index1.html">العودة الى اعلى الصفحة</a></lb>
+
+</ub>
 </div>
-
-
+</div>
 <div class="nav">
-  الحقوق محفوضة لدى alsamawy.com 
+  الحقوق محفوضة لدى MNYR ALSAMAWY 
 </div>
 
 </body>
