--- a/index2.html
+++ b/index2.html
@@ -3,45 +3,119 @@
 <html>
 <head>
   
-    <title>العلامه القاضي محمد عبد الرحمن السماوي</title>
+    <title>العلامة القاضي محمد عبد الرحمن السماوي</title>
 <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 <div id ="header">
 <br>
-<b><marquee> العلامه القاضي محمد عبد الرحمن السماوي</marquee></b>
+<b><marquee direction ="right"> العلامه القاضي محمد عبد الرحمن السماوي</marquee></b>
 <br>
 
 <!--  القائمة -->
 <div id="menu">
 <ul>
-<li><a href ="index.html">الرئيسية </a></li>
-<li><a href ="#aa">نسبه</a></li>
-<li><a href ="#bb">مناقبه</a></li>
-<li><a href ="#cc">القصيدة الاولى</a></li>
-<li><a href ="#dd">القصيدة الثانية</a></li>
-<li><a href ="#ee">المخطوطات</a></li>
+<li><a href ="index.html">العودة الى الصفحةالرئيسية </a></li>
 </ul>
 </div>
 
-</div>
+<br>
 <div class ="text8">
-<h1>المخطوطة الثانية</h1>
+<h1> القصيدة الثانية</h1>
+</div>
+<h2>
 
+ومن ما قاله العلامه محمد عبد الرحمن السماوي رحمه الله وتغشاه بواسع رحمته عند فقده لابيه وهو في المدينة المنورة على ساكنها افضل الصلاة والسلام وطلب الفسح من المصطفى ليعود الى مكة وسمع طائر البلبل على نخله وهو عند مسجد قباء وانشد هذه الابيات 
+<br>
+</h2>
+<div class="text8">
 <b>
-انتضرونا قريبا
+يابلبلاً بين البلابل بلبلا *** مهلاً روَيداً الفؤاد اشتعلا
+<br>
+احرَقت جوف الجَافي عَنْ أَحبابه *** نغمك ربابي هز روابي ذَالخلَا
+ <br>
+اسكر حَواسِي ثم ذكرني أَباً *** حَبيباً حِسْيباً بَهْلَوَاناً أَفْضَلَا
+<br>
+مُهَيمِناً عَلى الاوَلاد شفيقاً في أَهلِهِ *** خُلُقاً وَخَلقا للمَحَاسن شَمَلَا
+<br>
+من بيت عَلمٍ نجل عَالَمٍ قَدْ مَضَا *** مَخْلُوط في عَقل رَجِيَحٍ أَكْمَلَا
+<br>
+شَخْصَُ كريمَُ خُلقت من مَا صُلبه *** مَا من جميع اعضائه قَد نَزَلا
+<br>
+خَلْقيِ نَزل من سَبْل قُرَّة عَيْنه *** سُلَالةَُ منْ مَا مَهينٍ حَصَلا
+<br>
+وتكونت نطفةَُ مَفَاصل سَيدي *** سواني الخلاق مِنْهَا رَجُلا
+<br>
+وَأَخْرَجَنيِ الله منْ مَجَارِي صُلبهِ *** وَروحي من روح الابا انْفَصَلا
+<br>
+ياروح روحي هل تمن يا ابتي *** في نظرة من وجهك المهلهلا
+<br>
+أو ضمة من جسمك الصفي الندي *** تشفي به داء ولدك كالعسلا
+<br>
+احببت ان انظر لوجهك نظرة *** اولمحة من ظل شخصك يرملا
+<br>
+ركضني زمان القرب منك برجله *** وادخلني البعد المبرح مدخلا
+<br>
+جعلت فداء نعلك ومضجع مضجعك *** وامعاء جوفك وما منها نزلا
+<br>
+ولحم اعضائك مع الجسم الذي *** اذا تصبب عرقا واغتسلا
+<br>
+كانه البدر المدور في السماء *** وريحه يحي العظام النحلا
+<br>
+شوق لغرفة انت فيها ساكناً *** وثوب قطن فيه جسمك دخلا
+<br>
+تاجك شمساً ووجهك قمراً *** وليلك صبحاً وسمرك عسلا
+<br>
+ليت شعري هل افوز بوصلكا *** واستنشق الريح في بلوغ الاملا
+<br>
+والثم ورود خدك وقبل كفكا *** عسى لبعد البين يرجع اسفلا
+<br>
+وان حكم الابعاد بين وبينكا *** أحوقل اه ولا حولا ولا
+<br>
+ولكني في روضة الهادي الشفيع *** ملتمس الشباك ودمعي هملا
+<br>
+معتنق قبر الحبيب المصطفى *** بجاهه عودى لاهلي عجلا
+<br>
+يابن العواتك من قريش المددا *** شوال مضى والركب عني رحلا
+<br>
+قد زل بدراً اينما قال الكريم *** فيه لكم والركب عنكم رحلا 
+<br>
+الفسح ياسيد ولد ادم وداع *** ثم الاعانه والغوث ياسيد الملا
+<br>
+الاستخاره في الاشاره عاجلا *** هات خيرتي في ليلتي لا تبخلا
+<br>
+يافرحتي طلبني خير الورى *** قال قربو فيمن الينا وصلا
+<br>
+وبليلتي دخلت في حجرته *** ثم قربت ياحبذاك المدخلا
+<br>
+الى شريف المضجع العالي وكان *** مضطجعا حتى نهض مستقبلا
+<br>
+إلى اللقاء وصاحبيه معه *** وزرتهم حتى بلغت الاملا
+<br>
+ثم افتسحت بعد طول زورة *** وقد عشاني نوره المشتعلا
+<br>
+صلى عليك الله ياخير الورا *** ياخاتماً للرسل وخلقك اولا
+<br>
+والاال والاصحاب ماسبح له *** بلبل بدى على الروابي بلبلا
+<br>
 </b>
 </div>
+<h2>
+<marquee direction ="right">الحقوق محفوضة لدى الناشر لايحق لاي شخص اقتباس جزء منها  الا اذا ذكر المصدر</marquee>
+</h2>
+<div class ="text11">
+<div class="menu1">
+<ub>
 
+<lb><a href ="index2.html">العودة الى اعلى الصفحة</a></lb>
 
+</ub>
+</div>
+</div>
 <div class="nav">
-  الحقوق محفوضة لدى alsamawy.com 
+الحقوق محفوظة لدى MNYR ALSAMAWY
 </div>
 
-</body>
-</html>
-</head>
-<body>
 
 </body>
 </html>
