--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ MNYR ALSAMAWY للتواصل :<img src ="ff.png" width ="50px" height ="50px"></
 
 <h3>زوار الموقع<h3>
 <div class="text10">
-<a href="http://info.flagcounter.com/J3fR"><img src="http://s06.flagcounter.com/count/J3fR/bg_383938/txt_CCCCCC/border_383938/columns_3/maxflags_20/viewers_3/labels_1/pageviews_1/flags_1/" alt="Flag Counter" border="0"></a>
+<a href="https://info.flagcounter.com/ZtK9"><img src="https://s01.flagcounter.com/map/ZtK9/size_s/txt_000000/border_CCCCCC/pageviews_0/viewers_0/flags_0/" alt="Flag Counter" border="0"></a>
 
 </div>
 <div class ="text11">
