--- a/index.html
+++ b/index.html
@@ -203,8 +203,7 @@ MNYR ALSAMAWY للتواصل :<img src ="ff.png" width ="50px" height ="50px"></
 
 <h3>زوار الموقع<h3>
 <div class="text10">
-<a href="https://info.flagcounter.com/ZtK9"><img src="https://s01.flagcounter.com/map/ZtK9/size_s/txt_000000/border_CCCCCC/pageviews_0/viewers_0/flags_0/" alt="Flag Counter" border="0"></a>
-
+<a href="https://info.flagcounter.com/2cOg"><img src="https://s04.flagcounter.com/count2/2cOg/bg_FFFFFF/txt_000000/border_CCCCCC/columns_3/maxflags_12/viewers_0/labels_1/pageviews_1/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
 </div>
 <div class ="text11">
 <div class="menu1">
